examples/test/testpolicy7169.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7169
  namespace: namespace191
spec:
  podSelector:
    matchLabels:
      key30: value5
      key16: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value17
      podSelector:
        matchLabels:
          key19: value26
          key24: value18
          key25: value5
